优化：完善沉默模式设计与代码清理
【功能优化】
- 重构沉默模式逻辑：should_enter_silence_mode/should_exit_silence_mode
- 沉默模式仅影响回复频率，不影响内容质量
- 完善 block_judge_prompt 提示词指导
- 统一上下文长度为 30 条消息

【代码清理】
- 删除废弃的 message_judge.py
- 移除硬编码 API 密钥，改用 LLMConfig
- 删除未使用导入、简化类型注解
- 更新 .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -126,6 +126,12 @@ venv.bak/
 # Rope project settings
 .ropeproject
 
+# Editor swap files
+*.swp
+*.swo
+*~
+.DS_Store
+
 # mkdocs documentation
 /site
 
